@@ -418,10 +418,13 @@ let setup_toplevel_build_env (toplevel : Ocaml_toplevels.toplevel) log env =
   setup_tool_build_env toplevel log env
 
 let mk_compiler_env_setup name (compiler : Ocaml_compilers.compiler) =
-  Actions.make name (setup_compiler_build_env compiler)
+  Actions.make ~name ~description:(Printf.sprintf "Setup build env (%s)" name)
+    (setup_compiler_build_env compiler)
 
 let mk_toplevel_env_setup name (toplevel : Ocaml_toplevels.toplevel) =
-  Actions.make name (setup_toplevel_build_env toplevel)
+  Actions.make ~name
+    ~description:(Printf.sprintf "Setup toplevel env (%s)" name)
+    (setup_toplevel_build_env toplevel)
 
 let setup_ocamlc_byte_build_env =
   mk_compiler_env_setup
@@ -492,25 +495,29 @@ let compile (compiler : Ocaml_compilers.compiler) log env =
 
 let ocamlc_byte =
   Actions.make
-    "ocamlc.byte"
+    ~name:"ocamlc.byte"
+    ~description:"Compile the program using ocamlc.byte"
     (compile Ocaml_compilers.ocamlc_byte)
 
 let ocamlc_opt =
   native_action
     (Actions.make
-      "ocamlc.opt"
+      ~name:"ocamlc.opt"
+      ~description:"Compile the program using ocamlc.opt"
       (compile Ocaml_compilers.ocamlc_opt))
 
 let ocamlopt_byte =
   native_action
     (Actions.make
-      "ocamlopt.byte"
+      ~name:"ocamlopt.byte"
+      ~description:"Compile the program using ocamlopt.byte"
       (compile Ocaml_compilers.ocamlopt_byte))
 
 let ocamlopt_opt =
   native_action
     (Actions.make
-      "ocamlopt.opt"
+      ~name:"ocamlopt.opt"
+      ~description:"Compile the program using ocamlopt.opt"
       (compile Ocaml_compilers.ocamlopt_opt))
 
 let env_with_lib_unix env =
@@ -555,7 +562,9 @@ let debug log env =
     (Result.fail_with_reason reason, env)
   end
 
-let ocamldebug = Actions.make "ocamldebug" debug
+let ocamldebug =
+  Actions.make ~name:"ocamldebug" ~description:"Run ocamldebug on the program"
+    debug
 
 let objinfo log env =
   let tools_directory = Ocaml_directories.tools in
@@ -595,7 +604,9 @@ let objinfo log env =
     (Result.fail_with_reason reason, env)
   end
 
-let ocamlobjinfo = Actions.make "ocamlobjinfo" objinfo
+let ocamlobjinfo =
+  Actions.make ~name:"ocamlobjinfo"
+    ~description:"Run ocamlobjinfo on the program" objinfo
 
 let mklib log env =
   let program = Environments.safe_lookup Builtin_variables.program env in
@@ -631,7 +642,9 @@ let mklib log env =
     (Result.fail_with_reason reason, env)
   end
 
-let ocamlmklib = Actions.make "ocamlmklib" mklib
+let ocamlmklib =
+  Actions.make ~name:"ocamlmklib"
+    ~description:"Run ocamlmklib to produce the program" mklib
 
 let finalise_codegen_cc test_basename _log env =
   let test_module =
@@ -733,7 +746,9 @@ let run_codegen log env =
     (Result.fail_with_reason reason, env)
   end
 
-let codegen = Actions.make "codegen" run_codegen
+let codegen =
+  Actions.make ~name:"codegen" ~description:"Run codegen on the test file"
+    run_codegen
 
 let run_cc log env =
   let program = Environments.safe_lookup Builtin_variables.program env in
@@ -767,7 +782,9 @@ let run_cc log env =
     (Result.fail_with_reason reason, env)
   end
 
-let cc = Actions.make "cc" run_cc
+let cc =
+  Actions.make ~name:"cc" ~description:"Run C compiler to build the program"
+    run_cc
 
 let run_expect_once input_file principal log env =
   let expect_flags = Sys.safe_getenv "EXPECT_FLAGS" in
@@ -814,10 +831,12 @@ let run_expect log env =
   let input_file = Actions_helpers.testfile env in
   run_expect_twice input_file log env
 
-let run_expect = Actions.make "run-expect" run_expect
+let run_expect =
+  Actions.make ~name:"run-expect" ~description:"Run expect test" run_expect
 
 let make_check_tool_output name tool = Actions.make
-  name
+  ~name
+  ~description:(Printf.sprintf "Check tool output (%s)" name)
   (Actions_helpers.check_output
     tool#family
     tool#output_variable
@@ -888,13 +907,17 @@ let compare_bytecode_programs_code log env =
 let compare_bytecode_programs =
   native_action
     (Actions.make
-      "compare-bytecode-programs"
+      ~name:"compare-bytecode-programs"
+      ~description:"Compare the bytecode programs generated by ocamlc.byte and \
+        ocamlc.opt"
       compare_bytecode_programs_code)
 
 let compare_binary_files =
   native_action
     (Actions.make
-      "compare-binary-files"
+      ~name:"compare-binary-files"
+      ~description:"Compare the native programs generated by ocamlopt.byte and \
+        ocamlopt.opt"
       (compare_programs Ocaml_backends.Native native_programs_comparison_tool))
 
 let compile_module compiler compilername compileroutput log env
@@ -1059,13 +1082,15 @@ let run_test_program_in_toplevel (toplevel : Ocaml_toplevels.toplevel) log env =
       end else (result, env)
 
 let ocaml = Actions.make
-  "ocaml"
+  ~name:"ocaml"
+  ~description:"Run the test program in the toplevel"
   (run_test_program_in_toplevel Ocaml_toplevels.ocaml)
 
 let ocamlnat =
   native_action
     (Actions.make
-      "ocamlnat"
+      ~name:"ocamlnat"
+      ~description:"Run the test program in the native toplevel ocamlnat"
       (run_test_program_in_toplevel Ocaml_toplevels.ocamlnat))
 
 let check_ocaml_output = make_check_tool_output
@@ -1109,85 +1134,101 @@ let config_variables _log env =
   ] env
 
 let flat_float_array = Actions.make
-  "flat-float-array"
+  ~name:"flat-float-array"
+  ~description:"Passes if the compiler is configured with \
+    --enable-flat-float-array"
   (Actions_helpers.pass_or_skip Ocamltest_config.flat_float_array
-    "compiler configured with -flat-float-array"
-    "compiler configured with -no-flat-float-array")
+    "compiler configured with --enable-flat-float-array"
+    "compiler configured with --disable-flat-float-array")
 
 let no_flat_float_array = make
-  "no-flat-float-array"
+  ~name:"no-flat-float-array"
+  ~description:"Passes if the compiler is configured with \
+    --disable-flat-float-array"
   (Actions_helpers.pass_or_skip (not Ocamltest_config.flat_float_array)
-    "compiler configured with -no-flat-float-array"
-    "compiler configured with -flat-float-array")
+    "compiler configured with --disable-flat-float-array"
+    "compiler configured with --enable-flat-float")
 
 let flambda = Actions.make
-  "flambda"
+  ~name:"flambda"
+  ~description:"Passes if the compiler is configured with flambda enabled"
   (Actions_helpers.pass_or_skip Ocamltest_config.flambda
     "support for flambda enabled"
     "support for flambda disabled")
 
 let no_flambda = make
-  "no-flambda"
+  ~name:"no-flambda"
+  ~description:"Passes if the compiler is NOT configured with flambda enabled"
   (Actions_helpers.pass_or_skip (not Ocamltest_config.flambda)
     "support for flambda disabled"
     "support for flambda enabled")
 
 let shared_libraries = Actions.make
-  "shared-libraries"
+  ~name:"shared-libraries"
+  ~description:"Passes if shared libraries are supported"
   (Actions_helpers.pass_or_skip Ocamltest_config.shared_libraries
     "Shared libraries are supported."
     "Shared libraries are not supported.")
 
 let no_shared_libraries = Actions.make
-  "no-shared-libraries"
+  ~name:"no-shared-libraries"
+  ~description:"Passes if shared libraries are NOT supported"
   (Actions_helpers.pass_or_skip (not Ocamltest_config.shared_libraries)
     "Shared libraries are not supported."
     "Shared libraries are supported.")
 
 let native_compiler = Actions.make
-  "native-compiler"
+  ~name:"native-compiler"
+  ~description:"Passes if the native compiler is available"
   (Actions_helpers.pass_or_skip Ocamltest_config.native_compiler
     "native compiler available"
     "native compiler not available")
 
 let native_dynlink = Actions.make
-  "native-dynlink"
+  ~name:"native-dynlink"
+  ~description:"Passes if native dynlink support is available"
   (Actions_helpers.pass_or_skip (Ocamltest_config.native_dynlink)
     "native dynlink support available"
     "native dynlink support not available")
 
 let debugger = Actions.make
-  "debugger"
+  ~name:"debugger"
+  ~description:"Passes if the debugger is available"
   (Actions_helpers.pass_or_skip Ocamltest_config.ocamldebug
      "debugger available"
      "debugger not available")
 
 let instrumented_runtime = make
-  "instrumented-runtime"
+  ~name:"instrumented-runtime"
+  ~description:"Passes if the instrumented runtime is available"
   (Actions_helpers.pass_or_skip (Ocamltest_config.instrumented_runtime)
     "instrumented runtime available"
     "instrumented runtime not available")
 
 let csharp_compiler = Actions.make
-  "csharp-compiler"
+  ~name:"csharp-compiler"
+  ~description:"Passes if the C# compiler is available"
   (Actions_helpers.pass_or_skip (Ocamltest_config.csc<>"")
     "C# compiler available"
     "C# compiler not available")
 
 let windows_unicode = Actions.make
-  "windows-unicode"
+  ~name:"windows-unicode"
+  ~description:"Passes if Windows unicode support is available"
   (Actions_helpers.pass_or_skip (Ocamltest_config.windows_unicode )
     "Windows Unicode support available"
     "Windows Unicode support not available")
 
 let afl_instrument = Actions.make
-  "afl-instrument"
+  ~name:"afl-instrument"
+  ~description:"Passes if AFL instrumentation is enabled"
   (Actions_helpers.pass_or_skip Ocamltest_config.afl_instrument
     "AFL instrumentation enabled"
     "AFL instrumentation disabled")
 
 let no_afl_instrument = Actions.make
-  "no-afl-instrument"
+  ~name:"no-afl-instrument"
+  ~description:"Passes if AFL instrumentation is NOT enabled"
   (Actions_helpers.pass_or_skip (not Ocamltest_config.afl_instrument)
     "AFL instrumentation disabled"
     "AFL instrumentation enabled")
@@ -1269,7 +1310,8 @@ let rec ocamldoc_compile_all log env = function
         (r,env)
 
 let setup_ocamldoc_build_env =
-  Actions.make "setup_ocamldoc_build_env" @@ fun log env ->
+  Actions.make ~name:"setup_ocamldoc_build_env"
+    ~description:"Setup ocamldoc build environment" @@ fun log env ->
   let (r,env) = setup_tool_build_env ocamldoc log env in
   if not (Result.is_pass r) then (r,env) else
   let source_directory = Actions_helpers.test_source_directory env in
@@ -1301,7 +1343,8 @@ let ocamldoc_o_flag env =
   | _ -> output
 
 let run_ocamldoc =
-  Actions.make "ocamldoc" @@ fun log env ->
+  Actions.make ~name:"ocamldoc" ~description:"Run ocamldoc on the test file" @@
+  fun log env ->
   (* modules corresponds to secondaries modules of which the
      documentation and cmi files need to be build before the main
      module documentation *)
